Web: 01, add several index.html.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,9 +43,12 @@
         <h1>{{ page.title }}</h1>
         </header>
         <nav>
-        <span><a title="home page" class="" href="/">Home</a></span>
-        <span><a title="categories" class="" href="/categories/">Categories</a></span>
-        <span><a title="tags" class="" href="/tags/">Tags</a></span>
+        <span><a title="home page" class="" href="/">首页</a></span>
+        <span><a title="categories" class="" href="/categories/">博客</a></span>
+        <span><a title="tags" class="" href="/tags/">标签</a></span>
+        <span><a title="links" class="" href="/links/">链接</a></span>
+        <span><a title="about" class="" href="/about/">关于我</a></span>
+        <span><a title="guestbook" class="" href="/guestbook/">留言板</a></span>
         </nav>
         <article class="content">
         {{ content }}
