--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,7 +45,9 @@
         <nav>
         <span><a title="home page" class="" href="/">首页</a></span>
         <span><a title="categories" class="" href="/categories/">博客</a></span>
+        <!-- del by skywang
         <span><a title="tags" class="" href="/tags/">标签</a></span>
+        -->
         <span><a title="links" class="" href="/links/">链接</a></span>
         <span><a title="about" class="" href="/about/">关于我</a></span>
         <span><a title="guestbook" class="" href="/guestbook/">留言板</a></span>
