--- a/media/css/home.css
+++ b/media/css/home.css
@@ -1,4 +1,3 @@
-@import url(http://fonts.googleapis.com/css?family=Galdeano);
 @media screen {
 .container {
 width:auto;
@@ -52,7 +51,7 @@ border:4px solid #FFF;
 }
 
 body {
-font-family:Galdeano,"Hiragino Sans GB","Microsoft YaHei",Trebuchet,"Trebuchet MS",Tahoma,"Lucida Grande","Lucida Sans Unicode",Verdana,sans-serif;
+font-family:"Hiragino Sans GB","Microsoft YaHei",Trebuchet,"Trebuchet MS",Tahoma,"Lucida Grande","Lucida Sans Unicode",Verdana,sans-serif;
 font-size:15px;
 line-height:30px;
 color:#555;
