--- a/media/css/style.css
+++ b/media/css/style.css
@@ -37,8 +37,27 @@ blockquote p{margin:0;padding:.5em 0;}
 	padding:.2em 1em;
 
 }
-table{ border: 4px solid #66ccff;} 
-table td{ border:solid 2px #71b9de}
+table {
+    font-size:16px;
+    color:#333333;
+    border-width: 1px;
+    border-color: #666666;
+    border-collapse: collapse;
+}
+table th {
+    border-width: 1px;
+    padding: 8px;
+    border-style: solid;
+    border-color: #666666;
+    background-color: #dedede;
+}
+table td {
+    border-width: 1px;
+    padding: 8px;
+    border-style: solid;
+    border-color: #666666;
+    background-color: #ffffff;
+}
 
 .listing-item time{color:#999999;}
 .listing-seperator{font-weight:bold;}
